--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/steph-sce/cuisines_des_reseaux_back/issues"
   },
-  "homepage": "https://github.com/steph-sce/cuisines_des_reseaux_back#readme"
+  "homepage": "https://github.com/steph-sce/cuisines_des_reseaux_back#readme",
+  "dependencies": {
+    "express": "^4.18.2"
+  }
 }
